<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_label"
        android:textSize="16sp"
        android:layout_marginBottom="4dp" />

    <Spinner
        android:id="@+id/genre_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/platform_label"
        android:textSize="16sp"
        android:layout_marginBottom="4dp" />

    <Spinner
        android:id="@+id/platform_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_label"
        android:textSize="16sp"
        android:layout_marginBottom="4dp" />

    <Spinner
        android:id="@+id/order_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="12dp"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:backgroundTint="@color/lightblue"
        android:textColor="@android:color/white"
        android:paddingHorizontal="32dp"
        android:layout_gravity="center" />
</LinearLayout>